force-app/main/default/objects/Email_Activity__c/Email_Activity__c.object-meta.xml
<CustomObject>
    <description>Any email sent in Sendgrid, create a new record in email activity with the Email information – subject, date/time send, status (e.g. open/closed/bounced/unsubscribed)</description>
    <label>Email Activity</label>
    <nameField>
        <displayFormat>EA-{00000}</displayFormat>
        <label>Email Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>