force-app/main/default/objects/Email_Activity__c/fields/Count_of_Clicks__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Clicks__c</fullName>
    <label>Count of Clicks</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>