force-app/main/default/objects/Email_Activity__c/fields/Count_of_Opens__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Opens__c</fullName>
    <label>Count of Opens</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>