force-app/main/default/objects/Email_Activity__c/fields/Email_From__c.field-meta.xml
<CustomField>
    <fullName>Email_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email From</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Activities (Email From)</relationshipLabel>
    <relationshipName>Email_Activities1</relationshipName>
    <type>Lookup</type>
</CustomField>