force-app/main/default/objects/Email_Activity__c/fields/Email_Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Sent To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Activities</relationshipLabel>
    <relationshipName>Email_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>