force-app/main/default/objects/Email_Activity__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>bounces</fullName>
                <label>Bounce</label>
            </value>
            <value>
                <fullName>blocks</fullName>
                <label>Block</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>