force-app/main/default/objects/Email_Activity__c/fields/From_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Email__c</fullName>
    <label>From Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>