force-app/main/default/objects/Email_Activity__c/fields/Message_Id__c.field-meta.xml
<CustomField>
    <fullName>Message_Id__c</fullName>
    <description>sendgrid message id</description>
    <label>Message Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>