force-app/main/default/objects/Email_Activity__c/fields/To_Email__c.field-meta.xml
<CustomField>
    <fullName>To_Email__c</fullName>
    <label>To Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>